--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
     <build>
         <plugins>
+            <!-- Plugin để biên dịch mã nguồn -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -56,6 +57,13 @@
                     <release>17</release>
                 </configuration>
             </plugin>
+
+            <!-- Plugin để đóng gói file JAR có thể chạy -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
+
 </project>
